Created page with "Системата за закотвяне и наслагване е функция за максимизиране на пространството, налично за [[3D_view|3D view]]. Той трансформира стандартните закотвени панели, като [[Combo_view|Combo View]], в плаващи, прозрачни елементи, които стоят върху 3D изгледа. Това позволява на 3D изглед..."

--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -8,7 +8,7 @@
 <li><a href="../pl/Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Interfejs u&#380;ytkownika (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="Interface (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; rozhran&iacute; (14% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#30028;&#38754; (38% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -88,7 +88,7 @@
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p>
 <figure class="mw-default-size" typeof="mw:File/Thumb"><a href="../index.php?title=Dock_Panel_Overlay.png&amp;filetimestamp=20250726040057&amp;.html" class="mw-file-description"><img alt="Dock panel overlay enabled, showing transparent and auto-hidden panels" src="../File/Dock_Panel_Overlay.png" decoding="async" width="300" height="171" class="mw-file-element" data-file-width="1850" data-file-height="1053"></a><figcaption>Dock panel overlay enabled, showing transparent and auto-hidden panels</figcaption></figure>
-<p>The dock panel overlay system is a feature to maximize the space available for the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>. It transforms standard docked panels, like the <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo View</a>, into floating, transparent widgets that sit on top of the 3D view. This allows the 3D view to expand and use the space the panels previously occupied. The overlay panels become fully opaque and interactive when the mouse hovers over them, and transparent again when the mouse moves away, even enabling clicking through them to interact with the model.
+<p>&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1079;&#1072; &#1079;&#1072;&#1082;&#1086;&#1090;&#1074;&#1103;&#1085;&#1077; &#1080; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1077; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103; &#1079;&#1072; &#1084;&#1072;&#1082;&#1089;&#1080;&#1084;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086;, &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1086; &#1079;&#1072; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>. &#1058;&#1086;&#1081; &#1090;&#1088;&#1072;&#1085;&#1089;&#1092;&#1086;&#1088;&#1084;&#1080;&#1088;&#1072; &#1089;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1080;&#1090;&#1077; &#1079;&#1072;&#1082;&#1086;&#1090;&#1074;&#1077;&#1085;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;, &#1082;&#1072;&#1090;&#1086; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo View</a>, &#1074; &#1087;&#1083;&#1072;&#1074;&#1072;&#1097;&#1080;, &#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1090;&#1086;&#1103;&#1090; &#1074;&#1098;&#1088;&#1093;&#1091; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;. &#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1085;&#1072; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1076;&#1072; &#1089;&#1077; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1080; &#1080; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;&#1090;&#1077; &#1089;&#1072; &#1079;&#1072;&#1077;&#1083;&#1080; &#1087;&#1088;&#1077;&#1076;&#1080; &#1090;&#1086;&#1074;&#1072;. &#1053;&#1072;&#1089;&#1083;&#1072;&#1075;&#1072;&#1085;&#1080;&#1090;&#1077; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; &#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1085;&#1072;&#1087;&#1098;&#1083;&#1085;&#1086; &#1085;&#1077;&#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1085;&#1080; &#1080; &#1080;&#1085;&#1090;&#1077;&#1088;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1084;&#1080;&#1085;&#1077; &#1085;&#1072;&#1076; &#1090;&#1103;&#1093;, &#1080; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086; &#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1085;&#1080;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1089;&#1077; &#1086;&#1090;&#1076;&#1072;&#1083;&#1077;&#1095;&#1080;, &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072;&#1081;&#1082;&#1080; &#1076;&#1086;&#1088;&#1080; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077; &#1087;&#1088;&#1077;&#1079; &#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;, &#1079;&#1072; &#1076;&#1072; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072; &#1089; &#1084;&#1086;&#1076;&#1077;&#1083;&#1072;.
 </p><p>The main switch for this feature is the <b><a href="../Std_DockOverlayAll.html" title="Std DockOverlayAll">Toggle overlay for all</a></b> command. Additional commands are available for more granular control.
 </p>
 <h3><span class="mw-headline" id="Overlay_Modes">Overlay Modes</span></h3>
@@ -132,34 +132,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117093419
+Cached time: 20260117093702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.235 seconds
 Preprocessor visited node count: 356/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2530/5000000 bytes
+Unstrip post&#8208;expand size: 2531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.548      1 -total
- 29.35%    7.792      1 Template:Interface_navi/bg
- 20.66%    5.484      1 Template:Userdocnavi/bg
- 16.45%    4.366      7 Template:StdMenu
- 15.41%    4.091      2 Template:Navigation_menu_2
-  8.37%    2.223      1 Template:Caption
-  8.34%    2.215     20 Template:MenuCommand
-  8.08%    2.144      1 Template:TOCright
-  7.74%    2.054      1 Template:Version
+100.00%   73.002      1 -total
+ 27.71%   20.230      1 Template:Interface_navi/bg
+ 26.18%   19.114      1 Template:Userdocnavi/bg
+ 15.37%   11.220      2 Template:Navigation_menu_2
+ 15.25%   11.136      7 Template:StdMenu
+ 12.29%    8.973      1 Template:TOCright
+  7.98%    5.826      1 Template:Caption
+  7.96%    5.810     20 Template:MenuCommand
+  4.49%    3.275      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117093419 and revision id 1739396. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117093701 and revision id 1739398. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
