--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -93,7 +93,7 @@
 </p><p><span id="Overlay_Modes"></span>
 </p>
 <h3><span id=".D0.9D.D0.B0.D1.87.D0.B8.D0.BD.D0.B8_.D0.BD.D0.B0_.D0.BD.D0.B0.D1.81.D0.BB.D0.B0.D0.B3.D0.B2.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1053;&#1072;&#1095;&#1080;&#1085;&#1080;_&#1085;&#1072;_&#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077;">&#1053;&#1072;&#1095;&#1080;&#1085;&#1080; &#1085;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077;</span></h3>
-<p>Each panel in the overlay system can be set to a different mode, allowing for a customized workflow. These settings are available by clicking the overlay mode button (<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Overlay_Mode.svg&amp;filetimestamp=20250726043037&amp;.html" class="mw-file-description"><img src="../File/Overlay_Mode.svg" decoding="async" width="12" height="12" class="mw-file-element" data-file-width="12" data-file-height="12"></a></span>) in the title bar of an overlay panel.
+<p>&#1042;&#1089;&#1077;&#1082;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083; &#1074; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1079;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1077;&#1085; &#1085;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1077;&#1085; &#1088;&#1077;&#1078;&#1080;&#1084;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;. &#1058;&#1077;&#1079;&#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1089;&#1072; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1073;&#1091;&#1090;&#1086;&#1085;&#1072; &#1079;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; (<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Overlay_Mode.svg&amp;filetimestamp=20250726043037&amp;.html" class="mw-file-description"><img src="../File/Overlay_Mode.svg" decoding="async" width="12" height="12" class="mw-file-element" data-file-width="12" data-file-height="12"></a></span>) &#1074; &#1079;&#1072;&#1075;&#1083;&#1072;&#1074;&#1085;&#1072;&#1090;&#1072; &#1083;&#1077;&#1085;&#1090;&#1072; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083; &#1089; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077;.
 </p>
 <ul><li><b>None</b>: This is the default mode. The panel remains visible but transparent when not in use, and becomes opaque on mouse-over. It provides a good balance between access to tools and 3D view space.</li></ul>
 <ul><li><b>Auto hide</b>: This mode completely hides the panel by sliding it off-screen. The panel will only reappear when you move your mouse to the edge of the window where it is hiding. This mode provides the maximum screen space and is suitable for panels that are used infrequently.</li></ul>
@@ -133,12 +133,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117093911
+Cached time: 20260117094011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -149,18 +149,18 @@ Unstrip post&#8208;expand size: 2531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.241      1 -total
- 28.02%    5.672      1 Template:Interface_navi/bg
- 18.00%    3.644      7 Template:StdMenu
- 17.84%    3.610      1 Template:Userdocnavi/bg
- 14.02%    2.837      2 Template:Navigation_menu_2
- 10.63%    2.152      1 Template:TOCright
- 10.54%    2.134     20 Template:MenuCommand
-  9.10%    1.842      1 Template:Version
-  8.77%    1.776      1 Template:Caption
+100.00%   22.450      1 -total
+ 27.09%    6.082      1 Template:Interface_navi/bg
+ 22.09%    4.959      1 Template:Userdocnavi/bg
+ 15.36%    3.448      7 Template:StdMenu
+ 14.43%    3.240      2 Template:Navigation_menu_2
+ 10.52%    2.362      1 Template:Caption
+  8.49%    1.905     20 Template:MenuCommand
+  7.74%    1.738      1 Template:Version
+  6.57%    1.476      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117093911 and revision id 1739402. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094011 and revision id 1739404. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
