--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -98,7 +98,7 @@
 <ul><li><b>None</b>: &#1058;&#1086;&#1074;&#1072; &#1077; &#1088;&#1077;&#1078;&#1080;&#1084;&#1098;&#1090; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1055;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072; &#1074;&#1080;&#1076;&#1080;&#1084;, &#1085;&#1086; &#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1077;&#1085;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1085;&#1077; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;, &#1080; &#1089;&#1090;&#1072;&#1074;&#1072; &#1085;&#1077;&#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1077;&#1085; &#1087;&#1086;&#1076; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;. &#1058;&#1086;&#1081; &#1086;&#1089;&#1080;&#1075;&#1091;&#1088;&#1103;&#1074;&#1072; &#1076;&#1086;&#1073;&#1098;&#1088; &#1073;&#1072;&#1083;&#1072;&#1085;&#1089; &#1084;&#1077;&#1078;&#1076;&#1091; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1072; &#1076;&#1086; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; 3D &#1079;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;&#1090;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;.</li></ul>
 <ul><li><b>Auto hide</b>: &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072;&#1087;&#1098;&#1083;&#1085;&#1086; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1075;&#1086; &#1087;&#1083;&#1098;&#1079;&#1075;&#1072; &#1080;&#1079;&#1074;&#1098;&#1085; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;. &#1055;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1080; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086; &#1089;&#1072;&#1084;&#1086; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1087;&#1088;&#1077;&#1084;&#1077;&#1089;&#1090;&#1080;&#1090;&#1077; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1076;&#1086; &#1088;&#1098;&#1073;&#1072; &#1085;&#1072; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072;, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1082;&#1088;&#1080;&#1077;. &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1086;&#1089;&#1080;&#1075;&#1091;&#1088;&#1103;&#1074;&#1072; &#1084;&#1072;&#1082;&#1089;&#1080;&#1084;&#1072;&#1083;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072; &#1080; &#1077; &#1087;&#1086;&#1076;&#1093;&#1086;&#1076;&#1103;&#1097; &#1079;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090; &#1088;&#1103;&#1076;&#1082;&#1086;.</li></ul>
 <ul><li><b>Show on edit</b>: &#1056;&#1077;&#1078;&#1080;&#1084;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1082;&#1080;&#1094;&#1072;). &#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1088;&#1077;&#1076;&#1072;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1087;&#1088;&#1080;&#1082;&#1083;&#1102;&#1095;&#1080;, &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1089;&#1077; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086;. &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1077; &#1087;&#1086;&#1076;&#1093;&#1086;&#1076;&#1103;&#1097; &#1079;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task</a>, &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088;.</li></ul>
-<ul><li><b>Hide on edit</b>: The opposite of "Show on edit". This mode automatically hides the panel when an object's edit mode is entered. This is useful for clearing away secondary panels (like the <a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a>) to reduce clutter while focusing on a specific task.</li></ul>
+<ul><li><b>Hide on edit</b>: &#1054;&#1073;&#1088;&#1072;&#1090;&#1085;&#1086;&#1090;&#1086; &#1085;&#1072; "Show on edit". &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086; &#1079;&#1072; &#1080;&#1079;&#1095;&#1080;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1074;&#1090;&#1086;&#1088;&#1080;&#1095;&#1085;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; (&#1082;&#1072;&#1090;&#1086; <a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a>), &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1085;&#1072;&#1084;&#1072;&#1083;&#1080; &#1073;&#1077;&#1079;&#1087;&#1086;&#1088;&#1103;&#1076;&#1098;&#1082;&#1098;&#1090;, &#1082;&#1072;&#1090;&#1086; &#1089;&#1098;&#1097;&#1077;&#1074;&#1088;&#1077;&#1084;&#1077;&#1085;&#1085;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1092;&#1086;&#1082;&#1091;&#1089;&#1080;&#1088;&#1072; &#1074;&#1098;&#1088;&#1093;&#1091; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;.</li></ul>
 <ul><li><b>Auto task</b>: A smart version of "Show on edit", designed for the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a>. It shows the panel only when a command opens an active task, and hides it the moment the task is completed, providing a more automated workflow.</li></ul>
 <h3><span class="mw-headline" id="Commands">Commands</span></h3>
 <p>The following commands control the dock panel overlay feature: 
@@ -133,12 +133,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117094314
+Cached time: 20260117094449
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -149,18 +149,18 @@ Unstrip post&#8208;expand size: 2531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.410      1 -total
- 27.79%    6.783      1 Template:Interface_navi/bg
- 23.37%    5.704      7 Template:StdMenu
- 15.19%    3.707      1 Template:Userdocnavi/bg
- 14.41%    3.518     20 Template:MenuCommand
- 11.78%    2.875      2 Template:Navigation_menu_2
- 10.11%    2.467      1 Template:Caption
-  7.78%    1.900      1 Template:TOCright
-  7.33%    1.789      1 Template:Version
+100.00%   24.874      1 -total
+ 28.50%    7.090      1 Template:Interface_navi/bg
+ 24.43%    6.077      1 Template:Userdocnavi/bg
+ 16.63%    4.138      7 Template:StdMenu
+ 16.60%    4.130      2 Template:Navigation_menu_2
+  9.29%    2.310      1 Template:TOCright
+  7.93%    1.971     20 Template:MenuCommand
+  7.40%    1.840      1 Template:Caption
+  4.80%    1.194      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094314 and revision id 1739410. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094449 and revision id 1739412. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
