--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -100,7 +100,9 @@
 <ul><li><b>Show on edit</b>: &#1056;&#1077;&#1078;&#1080;&#1084;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1082;&#1080;&#1094;&#1072;). &#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1088;&#1077;&#1076;&#1072;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1087;&#1088;&#1080;&#1082;&#1083;&#1102;&#1095;&#1080;, &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1089;&#1077; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086;. &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1077; &#1087;&#1086;&#1076;&#1093;&#1086;&#1076;&#1103;&#1097; &#1079;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task</a>, &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088;.</li></ul>
 <ul><li><b>Hide on edit</b>: &#1054;&#1073;&#1088;&#1072;&#1090;&#1085;&#1086;&#1090;&#1086; &#1085;&#1072; "Show on edit". &#1058;&#1086;&#1079;&#1080; &#1088;&#1077;&#1078;&#1080;&#1084; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086; &#1079;&#1072; &#1080;&#1079;&#1095;&#1080;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1074;&#1090;&#1086;&#1088;&#1080;&#1095;&#1085;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; (&#1082;&#1072;&#1090;&#1086; <a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a>), &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1085;&#1072;&#1084;&#1072;&#1083;&#1080; &#1073;&#1077;&#1079;&#1087;&#1086;&#1088;&#1103;&#1076;&#1098;&#1082;&#1098;&#1090;, &#1082;&#1072;&#1090;&#1086; &#1089;&#1098;&#1097;&#1077;&#1074;&#1088;&#1077;&#1084;&#1077;&#1085;&#1085;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1092;&#1086;&#1082;&#1091;&#1089;&#1080;&#1088;&#1072; &#1074;&#1098;&#1088;&#1093;&#1091; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;.</li></ul>
 <ul><li><b>Auto &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;'</b>: &#1048;&#1085;&#1090;&#1077;&#1083;&#1080;&#1075;&#1077;&#1085;&#1090;&#1085;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; &#1085;&#1072; "Show on edit", &#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1079;&#1085;&#1072;&#1095;&#1077;&#1085;&#1072; &#1079;&#1072; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a>. &#1058;&#1086;&#1081; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072; &#1089;&#1072;&#1084;&#1086; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072; &#1080; &#1103; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072;, &#1074; &#1082;&#1086;&#1081;&#1090;&#1086; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;&#1090;&#1072; &#1077; &#1080;&#1079;&#1087;&#1098;&#1083;&#1085;&#1077;&#1085;&#1072;, &#1086;&#1089;&#1080;&#1075;&#1091;&#1088;&#1103;&#1074;&#1072;&#1081;&#1082;&#1080; &#1087;&#1086;-&#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1086;&#1090;&#1086;&#1082;.</li></ul>
-<h3><span class="mw-headline" id="Commands">Commands</span></h3>
+<p><span id="Commands"></span>
+</p>
+<h3><span id=".D0.9A.D0.BE.D0.BC.D0.B0.D0.BD.D0.B4.D0.B8"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;">&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;</span></h3>
 <p>The following commands control the dock panel overlay feature: 
 </p>
 <ul><li><b><a href="../Std_DockOverlayAll.html" title="Std DockOverlayAll">Toggle overlay for all</a></b>: The master switch for the overlay feature. Toggles overlay mode on or off for all panels.</li>
@@ -133,13 +135,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117094613
+Cached time: 20260117094627
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 357/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.149 seconds
+Preprocessor visited node count: 358/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -149,18 +151,18 @@ Unstrip post&#8208;expand size: 2531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.694      1 -total
- 26.35%    6.507      1 Template:Interface_navi/bg
- 22.35%    5.520      7 Template:StdMenu
- 18.82%    4.647      1 Template:Userdocnavi/bg
- 14.64%    3.616      2 Template:Navigation_menu_2
- 10.58%    2.613     20 Template:MenuCommand
- 10.03%    2.476      1 Template:Caption
-  8.76%    2.164      1 Template:TOCright
-  6.17%    1.523      1 Template:Version
+100.00%   29.090      1 -total
+ 22.34%    6.499      1 Template:Interface_navi/bg
+ 20.62%    5.999      1 Template:Userdocnavi/bg
+ 19.54%    5.685      7 Template:StdMenu
+ 11.98%    3.486      1 Template:Caption
+ 11.76%    3.420      1 Template:TOCright
+ 11.33%    3.294     20 Template:MenuCommand
+ 11.19%    3.254      2 Template:Navigation_menu_2
+  6.85%    1.992      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094613 and revision id 1739414. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094626 and revision id 1739416. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
