Created page with "* {{MenuCommand|[[Std_DockOverlayAll|Toggle overlay for all]]}}: Главният превключвател за функцията за наслагване. Превключва режим на включване или изключване на наслагване за всички панели. * {{MenuCommand|[[Std_DockOverlayTransparentAll|Toggle transparent for all]]}}: Превключва специалния режим "transparent active", в който па..."

--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -8,7 +8,7 @@
 <li><a href="../pl/Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Interfejs u&#380;ytkownika (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="Interface (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; rozhran&iacute; (14% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#30028;&#38754; (38% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -105,11 +105,11 @@
 <h3><span id=".D0.9A.D0.BE.D0.BC.D0.B0.D0.BD.D0.B4.D0.B8"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;">&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;</span></h3>
 <p>&#1057;&#1083;&#1077;&#1076;&#1085;&#1080;&#1090;&#1077; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1080;&#1088;&#1072;&#1090; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1079;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1082; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072;: 
 </p>
-<ul><li><b><a href="../Std_DockOverlayAll.html" title="Std DockOverlayAll">Toggle overlay for all</a></b>: The master switch for the overlay feature. Toggles overlay mode on or off for all panels.</li>
-<li><b><a href="../Std_DockOverlayTransparentAll.html" title="Std DockOverlayTransparentAll">Toggle transparent for all</a></b>: Toggles the special "transparent active" mode, where panels remain transparent even when you mouse over them.</li>
-<li><b><a href="../Std_DockOverlayToggle.html" title="Std DockOverlayToggle">Toggle overlay</a></b>: Toggles overlay mode for the single panel currently under the mouse cursor.</li>
-<li><b><a href="../Std_DockOverlayToggleTransparent.html" title="Std DockOverlayToggleTransparent">Toggle transparent mode</a></b>: Toggles the "transparent active" mode for the single panel currently under the mouse cursor.</li>
-<li><b><a href="../Std_DockOverlayToggleLeft.html" title="Std DockOverlayToggleLeft">Toggle left</a></b>, <b><a href="../Std_DockOverlayToggleRight.html" title="Std DockOverlayToggleRight">Toggle right</a></b>, <b><a href="../Std_DockOverlayToggleTop.html" title="Std DockOverlayToggleTop">Toggle top</a></b>, <b><a href="../Std_DockOverlayToggleBottom.html" title="Std DockOverlayToggleBottom">Toggle bottom</a></b>: Show or hide the entire group of overlay panels on a specific side of the screen.</li></ul>
+<ul><li><b><a href="../Std_DockOverlayAll.html" title="Std DockOverlayAll">Toggle overlay for all</a></b>: &#1043;&#1083;&#1072;&#1074;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1090;&#1077;&#1083; &#1079;&#1072; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1079;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077;. &#1055;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1085;&#1077; &#1080;&#1083;&#1080; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;.</li>
+<li><b><a href="../Std_DockOverlayTransparentAll.html" title="Std DockOverlayTransparentAll">Toggle transparent for all</a></b>: &#1055;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1089;&#1087;&#1077;&#1094;&#1080;&#1072;&#1083;&#1085;&#1080;&#1103; &#1088;&#1077;&#1078;&#1080;&#1084; "transparent active", &#1074; &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;&#1090;&#1077; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072;&#1090; &#1087;&#1088;&#1086;&#1079;&#1088;&#1072;&#1095;&#1085;&#1080;, &#1076;&#1086;&#1088;&#1080; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1084;&#1080;&#1085;&#1072;&#1074;&#1072;&#1090;&#1077; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1087;&#1088;&#1077;&#1079; &#1090;&#1103;&#1093;.</li>
+<li><b><a href="../Std_DockOverlayToggle.html" title="Std DockOverlayToggle">Toggle overlay</a></b>: &#1055;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1079;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1095;&#1085;&#1080;&#1103; &#1087;&#1072;&#1085;&#1077;&#1083;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1077; &#1087;&#1086;&#1076; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;.</li>
+<li><b><a href="../Std_DockOverlayToggleTransparent.html" title="Std DockOverlayToggleTransparent">Toggle transparent mode</a></b>: &#1055;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1088;&#1077;&#1078;&#1080;&#1084; "transparent active" &#1079;&#1072; &#1077;&#1076;&#1080;&#1085;&#1085;&#1080;&#1103; &#1087;&#1072;&#1085;&#1077;&#1083;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1077; &#1087;&#1086;&#1076; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;.</li>
+<li><b><a href="../Std_DockOverlayToggleLeft.html" title="Std DockOverlayToggleLeft">Toggle left</a></b>, <b><a href="../Std_DockOverlayToggleRight.html" title="Std DockOverlayToggleRight">Toggle right</a></b>, <b><a href="../Std_DockOverlayToggleTop.html" title="Std DockOverlayToggleTop">Toggle top</a></b>, <b><a href="../Std_DockOverlayToggleBottom.html" title="Std DockOverlayToggleBottom">Toggle bottom</a></b>: &#1055;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1085;&#1077; &#1080;&#1083;&#1080; &#1089;&#1082;&#1088;&#1080;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1094;&#1103;&#1083;&#1072;&#1090;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; &#1089; &#1085;&#1072;&#1089;&#1083;&#1072;&#1075;&#1074;&#1072;&#1085;&#1077; &#1086;&#1090; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1072; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;.</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -135,34 +135,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117094649
+Cached time: 20260117095648
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.069 seconds
-Real time usage: 0.208 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 358/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2531/5000000 bytes
+Unstrip post&#8208;expand size: 2535/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.512      1 -total
- 29.56%   10.793      1 Template:Interface_navi/bg
- 24.30%    8.872      1 Template:Userdocnavi/bg
- 15.87%    5.794      7 Template:StdMenu
- 11.11%    4.058      2 Template:Navigation_menu_2
- 10.83%    3.955     20 Template:MenuCommand
- 10.38%    3.791      1 Template:Version
-  5.86%    2.141      1 Template:TOCright
-  5.71%    2.086      1 Template:Caption
+100.00%   20.561      1 -total
+ 29.32%    6.028      1 Template:Interface_navi/bg
+ 22.02%    4.528      1 Template:Userdocnavi/bg
+ 15.48%    3.182      7 Template:StdMenu
+ 13.88%    2.855      2 Template:Navigation_menu_2
+  9.39%    1.930      1 Template:Caption
+  8.37%    1.721      1 Template:TOCright
+  7.55%    1.553     20 Template:MenuCommand
+  6.76%    1.390      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117094649 and revision id 1739418. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117095648 and revision id 1739420. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
