--- a/wiki/DataManager_Workbench.html
+++ b/wiki/DataManager_Workbench.html
@@ -1,4 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">DataManager Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><b>DataManager</b> is a FreeCAD workbench for auditing and cleaning up:
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">DataManager Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
+<b>DataManager</b> is a FreeCAD workbench for auditing and cleaning up:
 </p>
 <ul><li><b>VarSets</b> (<code>App::VarSet</code>) and their variables</li>
 <li><b>Spreadsheet aliases</b> (<code>Spreadsheet::Sheet</code>) and their alias names</li></ul>
@@ -17,13 +18,13 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116053229
+Cached time: 20260117101554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.012 seconds
-Real time usage: 0.900 seconds
-Preprocessor visited node count: 5/1000000
+CPU time usage: 0.008 seconds
+Real time usage: 0.040 seconds
+Preprocessor visited node count: 9/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
@@ -36,7 +37,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260116053247 and revision id 1739046. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411368-0!canonical and timestamp 20260117101556 and revision id 1739423. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
