--- a/wiki/fr/TechDraw_2PointCenterLine.html
+++ b/wiki/fr/TechDraw_2PointCenterLine.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2PointCenterLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2PointCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw 2PunkteMittellinie (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PunkteMittellinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2PointCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 punti (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwoma punktami (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwoma punktami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2PointCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#51216;&#44036; &#51473;&#49900;&#49440; (80% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ajouter une ligne centrale entre 2 points
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne centrale entre 2 points
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne centrale entre 2 points</b> ajoute une ligne centrale entre deux points.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CL2PointsSample.png&amp;filetimestamp=20190713140016&amp;.html" class="mw-file-description"><img src="../File/CL2PointsSample.png" decoding="async" width="200" height="239" class="mw-file-element" data-file-width="274" data-file-height="327"></a></span>
@@ -130,34 +128,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145926
+Cached time: 20260117132604
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 372/1000000
-Post&#8208;expand include size: 26132/2097152 bytes
-Template argument size: 10262/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.151 seconds
+Preprocessor visited node count: 371/1000000
+Post&#8208;expand include size: 26108/2097152 bytes
+Template argument size: 10238/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1702/5000000 bytes
+Unstrip post&#8208;expand size: 1712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.237      1 -total
- 34.97%    8.127      1 Template:TechDraw_Tools_navi/fr
- 27.63%    6.420      2 Template:Navigation_menu_2
- 18.11%    4.208      1 Template:Userdocnavi/fr
- 13.04%    3.031      2 Template:Docnav/fr
- 10.73%    2.494      1 Template:GuiCommand/fr
-  7.64%    1.775      1 Template:MenuCommand
-  6.72%    1.561      2 Template:Button
-  5.45%    1.267      1 Template:Caption
+100.00%   48.964      1 -total
+ 27.88%   13.650      1 Template:Caption
+ 22.48%   11.005      1 Template:TechDraw_Tools_navi/fr
+ 12.75%    6.241      2 Template:Navigation_menu_2
+ 12.05%    5.899      1 Template:GuiCommand/fr
+ 10.47%    5.129      2 Template:Docnav/fr
+  8.15%    3.989      1 Template:MenuCommand
+  8.01%    3.921      1 Template:Userdocnavi/fr
+  5.23%    2.559      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260111145926 and revision id 1734481. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260117132603 and revision id 1739426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
