--- a/wiki/fr/TechDraw_2PointCenterLine.html
+++ b/wiki/fr/TechDraw_2PointCenterLine.html
@@ -60,15 +60,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux points dans une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne centrale entre 2 points</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne centrale entre 2 points</b> dans le menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne centrale entre 2 points</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne centrale entre 2 points</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre. Voir <a href="../fr/TechDraw_FaceCenterLine.html#Options" title="TechDraw FaceCenterLine/fr">TechDraw Ligne centrale &agrave; une face</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pour confirmer.</li>
 <li>Une ligne centrale est ajout&eacute;e entre les points s&eacute;lectionn&eacute;s.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -128,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117132604
+Cached time: 20260117132729
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.151 seconds
-Preprocessor visited node count: 371/1000000
-Post&#8208;expand include size: 26108/2097152 bytes
-Template argument size: 10238/2097152 bytes
+CPU time usage: 0.082 seconds
+Real time usage: 0.176 seconds
+Preprocessor visited node count: 370/1000000
+Post&#8208;expand include size: 26084/2097152 bytes
+Template argument size: 10214/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,18 +142,18 @@ Unstrip post&#8208;expand size: 1712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.964      1 -total
- 27.88%   13.650      1 Template:Caption
- 22.48%   11.005      1 Template:TechDraw_Tools_navi/fr
- 12.75%    6.241      2 Template:Navigation_menu_2
- 12.05%    5.899      1 Template:GuiCommand/fr
- 10.47%    5.129      2 Template:Docnav/fr
-  8.15%    3.989      1 Template:MenuCommand
-  8.01%    3.921      1 Template:Userdocnavi/fr
-  5.23%    2.559      2 Template:Button
+100.00%   33.765      1 -total
+ 25.72%    8.686      1 Template:TechDraw_Tools_navi/fr
+ 25.30%    8.541      1 Template:Userdocnavi/fr
+ 19.62%    6.626      2 Template:Navigation_menu_2
+ 18.36%    6.198      1 Template:GuiCommand/fr
+ 12.41%    4.191      2 Template:Docnav/fr
+  7.26%    2.452      1 Template:Caption
+  4.79%    1.619      2 Template:Button
+  3.79%    1.279      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260117132603 and revision id 1739426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156643-0!canonical and timestamp 20260117132728 and revision id 1739428. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
